Fix css PetDetailsPage (less gap)

--- a/src/pages/PetDetailsPage/PetDetailsPage.module.css
+++ b/src/pages/PetDetailsPage/PetDetailsPage.module.css
@@ -154,7 +154,7 @@
   .infoContainer {
     display: flex;
     flex-wrap: wrap;
-    gap: 14px;
+    gap: 9px;
   }
 
   .icon {
